Updating tests for Azure and JDK13 with ShenandoahGC